--- a/index.html
+++ b/index.html
@@ -1,37 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi Timers</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+  <title>Timer App</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <div class="container">
-    <section class="container1">
-        <h1 class="heading1">Multiple Timers App</h1>
-        <div class="container2">
-            <div class="jumbotron">
-                <p class="set-time">Set Time : </p>
-                <div class="input-grp">
-                    <label for="hours"> hh :</label>
-                    <input type="number" id="hours" hidden>
-                    <label for="minutes"> mm :</label>
-                    <input type="number" id="minutes" hidden>
-                    <label for="seconds"> ss</label>
-                    <input type="number" id="seconds" hidden>
+  <h1 id="app-heading">Multiple Timers App</h1>
+  <div class="input-section">
+    <p>Set Timers: </p>
+    <input type="number" id="hours" placeholder="hh"/> :
+    <input type="number" id="minutes" placeholder="mm"/> :
+    <input type="number" id="seconds" placeholder="ss"/> 
+    <button onclick="startNewTimer()">Set</button>
+  </div>
+  <p id="current-timer">Current Timers</p>
+  <div id="active-timers">
+    <!-- all timers go here-->
+  </div>
 
-                </div>
-                <button class="btn btn-primary btn-lg" id="btn">set</button>
-            </div>
-        </div>
-        <div id="timersContainer"></div>
-        <button id="add-timer" class="centered">Add Timer</button>
-    </section>
-    </div>
-    <script src="./script.js"></script>
+
+  <script src="./script.js"></script>
 </body>
-
 </html>
